lintian-brush (0.10) UNRELEASED; urgency=medium

  * Add a (inefficient) --dry-run option. Closes: #915977
  * Add --update-changelog option to force updating of changelog.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 15 Dec 2018 17:18:50 +0000

lintian-brush (0.9) unstable; urgency=medium

  * Add CI configuration for Salsa.
  * Add fixer for unnecessary-team-upload.
  * Don't attempt to remove python*-*-dbg packages; they include _d.so
    files that are not in -dbgsym packages.
  * Don't traceback when no .git directory is found.
  * Add fixer for public-upstream-key-not-minimal.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 04 Dec 2018 23:12:14 +0000

lintian-brush (0.7) unstable; urgency=medium

  * Add fixer for package-needs-versioned-debhelper-build-depends.
  * Add fixer for package-uses-deprecated-debhelper-compat-version
  * Add support for fixing debhelper-but-no-misc-depends.
  * Add a --diff option.
  * Don't consider an empty directory to be a pending change in a git
    repository. Closes: #914038

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 20 Nov 2018 11:44:04 +0000

lintian-brush (0.6) unstable; urgency=medium

  * useless-autoreconf-build-depends: Actually require changes, don't
    just update debhelper build-depends.
  * Add support for a certainty tag in fixer output.
  * Fix compatibility with newer versions of Dulwich.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 05 Nov 2018 19:31:02 +0000

lintian-brush (0.5) unstable; urgency=medium

  * Bump debhelper version to 11.
  * Hide tracebacks by default, but report list of failed fixers.
  * Use secure copyright file specification URI.
  * Bump to standards version 4.2.1
  * file-contains-trailing-whitespace: Also trim empty lines from the
    ends of files.
  * Trim trailing whitespace.
  * debian/control: Tweak long description a bit.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 03 Nov 2018 16:50:03 +0000

lintian-brush (0.4) unstable; urgency=medium
