@@ -22,6 +22,7 @@ def test_suite():
     names = [
         'control',
         'run',
+        'systemd',
         ]
     module_names = [__name__ + '.test_' + name for name in names]
     module_names.append(__name__ + ".fixers.test_suite")
