@@ -1,0 +1,16 @@
+[Unit]
+# network-online is really needed, otherwise there are problems with snmp
+# -> 865620
+After=network-online.target
+Description=UPS power management daemon
+Documentation=man:apcupsd(8)
+
+[Service]
+ExecStartPre=/lib/apcupsd/prestart
+ExecStart=/sbin/apcupsd
+Type=forking
+KillMode=process
+PIDFile=/var/run/apcupsd.pid
+
+[Install]
+WantedBy=multi-user.target
