@@ -2,6 +2,8 @@ lintian-brush (0.10) UNRELEASED; urgency=medium
 
   * Add a (inefficient) --dry-run option. Closes: #915977
   * Add --update-changelog option to force updating of changelog.
+  * Add support for systemd-service-file-pidfile-refers-to-var-run.
+    Closes: #917565
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 15 Dec 2018 17:18:50 +0000
 
